--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1>My portfolio</h1>
-            <img src="image.jpeg" height="100"
+            <img src="20240730_111143.jpeg" height="100"
         </header>
         <main>
             <selection>My Name: Yugant R Belokar</selection>
